Exceptuando si es militar o no en concubine
