# app/Http/Controllers/ConcubinesController.php
@@ -30,7 +30,6 @@ class ConcubinesController extends Controller
      *              @OA\Property(property="phone", type="string", example=""),
      *              @OA\Property(property="residence_phone", type="string", format="string", example=""),
      *              @OA\Property(property="address", type="string", example=""),
-     *              @OA\Property(property="military", type="integer", example=1),
      *              @OA\Property(property="institution", type="string", format="string", example=""),
      *              @OA\Property(property="email", type="string", format="string", example=""),
      *              @OA\Property(property="name_work_reference_1", type="string", format="string", example=""),
@@ -86,7 +85,6 @@ class ConcubinesController extends Controller
      *              @OA\Property(property="phone", type="string", example=""),
      *              @OA\Property(property="residence_phone", type="string", format="string", example=""),
      *              @OA\Property(property="address", type="string", example=""),
-     *              @OA\Property(property="military", type="integer", example=1),
      *              @OA\Property(property="institution", type="string", format="string", example=""),
      *              @OA\Property(property="email", type="string", format="string", example=""),
      *              @OA\Property(property="name_work_reference_1", type="string", format="string", example=""),
@@ -141,7 +139,6 @@ class ConcubinesController extends Controller
      *                 @OA\Property(property="phone", type="string", example="8099877765"),
      *                 @OA\Property(property="residence_phone", type="string", example="8099886700"),
      *                 @OA\Property(property="address", type="string", example="Santo Domingo"),
-     *                 @OA\Property(property="military", type="integer", example=1),
      *                 @OA\Property(property="institution", type="string", example="ARD"),
      *                 @OA\Property(property="email", type="string", example="juan@gmail.com"),
      *                 @OA\Property(property="name_work_reference_1", type="string", format="string", example="Pedro Sanchez"),
@@ -175,7 +172,7 @@ class ConcubinesController extends Controller
             return response()->json(['error' => 'El solicitante proporcionado no existe.'], 404);
         }
 
-        $concubine = new Concubines($request->except('file'));
+        $concubine = new Concubines($request->except('file','military'));
         $concubine->save();
 
         if ($request->hasFile('file')) {
@@ -223,7 +220,6 @@ class ConcubinesController extends Controller
      *                 @OA\Property(property="phone", type="string", example="8099877765"),
      *                 @OA\Property(property="residence_phone", type="string", example="8099886700"),
      *                 @OA\Property(property="address", type="string", example="Santo Domingo"),
-     *                 @OA\Property(property="military", type="integer", example=1),
      *                 @OA\Property(property="institution", type="string", example="ARD"),
      *                 @OA\Property(property="email", type="string", example="juan@gmail.com"),
      *                 @OA\Property(property="kid_id", type="number", example=1),
@@ -255,7 +251,7 @@ class ConcubinesController extends Controller
         try{
             $concubine = Concubines::where('id', $id)->first();
 
-            $concubine->update($request->except('file'));
+            $concubine->update($request->except('file','military'));
 
             if ($request->hasFile('file')) {
                 $file = $request->file('file');
